--- a/src/main/resources/om.properties
+++ b/src/main/resources/om.properties
@@ -1,2 +1,4 @@
 handler.package=util.handlers
-handler.list=RemoveDuplicates,Statistics
+#handler.list=RemoveDuplicates,Statistics,VerifyArchive
+handler.list=Statistics
+handler.imageonly=true
