--- a/src/main/resources/om.properties
+++ b/src/main/resources/om.properties
@@ -1,4 +1,4 @@
-handler.package=util.handlers
+handler.package=bb.imgo.handlers
 
 #handler.list=RemoveDuplicates,Statistics,VerifyArchive
 handler.list=Statistics
