--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@
  * user guide available at https://docs.gradle.org/4.3/userguide/tutorial_java_projects.html
  */
 
-// Apply the java plugin to add support for Java
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -33,16 +32,14 @@ jar {
    }
 }
 
-// In this section you declare where to find the dependencies of your project
 repositories {
     jcenter()
 }
 
-// In this section you declare the dependencies for your production and test code
 dependencies {
-    // The production code uses the SLF4J logging API at compile time
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    testCompile 'junit:junit:4.12'
-    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    testImplementation 'junit:junit:4.12'
+    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    implementation 'org.apache.tika:tika-parsers:1.20'
 }
 
