Unit tests update, file type tests, additional test files
RemoveUnreadable -> FixFileExtension

--- a/data/test/resources/testdup.properties
+++ b/data/test/resources/testdup.properties
@@ -1,6 +1,7 @@
 handler.package=bb.imgo.handlers
-handler.list=RemoveDuplicates, Statistics
+handler.list=Statistics, RemoveDuplicates
 handler.moveFiles=false
+handler.imageonly=false
 
 directory.trash=data/unittest/ForDeletion
 directory.good=data/unittest/Good
