--- a/src/main/resources/om.properties
+++ b/src/main/resources/om.properties
@@ -1,6 +1,7 @@
 handler.package=bb.imgo.handlers
+handler.moveFiles=false
 
-#handler.list=RemoveDuplicates,Statistics,VerifyArchive
-handler.list=Statistics
+handler.list=FixFileExtension,RemoveDuplicates,Statistics
+#handler.list=Statistics
 
 handler.imageonly=true
