Fully implement FixFileExtensions
Add RENAME to actionlog
Switch listFiles calls to use filters to pick directories, or
non-directories

--- a/src/main/resources/om.properties
+++ b/src/main/resources/om.properties
@@ -4,4 +4,4 @@ handler.moveFiles=false
 handler.list=FixFileExtension,RemoveDuplicates,Statistics
 #handler.list=Statistics
 
-handler.imageonly=true
+handler.imageonly=false
