--- a/src/main/resources/move.properties
+++ b/src/main/resources/move.properties
@@ -1,8 +1,11 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=RemoveDuplicates,FixFileExtension,MoveToDateSubdirectory,SeparateVideos,RemoveEmptySubdirectory,Statistics
+handler.list=RemoveDuplicates,FixFileExtension,MoveToDateSubdirectory,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
 handler.imageonly=false
 
 separate.video.root=c:/Users/Brett/Videos
+
+backup.image.root=Z:/Pictures
+backup.video.root=Y:/Home Videos
 
