Allow directoryInit to abort processing
DirectoryNameUnderscoreToDash to convert _ to - in dir names.  Intended
to run once

--- a/src/main/resources/underscoretodash.properties
+++ b/src/main/resources/underscoretodash.properties
@@ -1,7 +1,7 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=RemoveDuplicates,FixFileExtension,MoveToDateSubdirectory,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
+handler.list=RemoveEmptySubdirectory,DirectoryNameUnderscoreToDash
 handler.imageonly=false
 
 separate.video.root=c:/Users/Brett/Videos
