--- a/src/main/resources/move.properties
+++ b/src/main/resources/move.properties
@@ -1,7 +1,7 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=RemoveDuplicates,FixFileExtension,MoveToDateSubdirectory,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
+handler.list=FixFileExtension,DeleteFileType,RemoveDuplicates,MoveToDateSubdirectory,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
 handler.imageonly=false
 
 separate.video.root=c:/Users/Brett/Videos
@@ -11,4 +11,6 @@ backup.video.root=Y:/Home Videos
 
 directory.trash=C:/Users/Brett/TrashImages
 directory.good=C:/Users/Brett/GoodImages
+
+delete.extensions=aae
 
