--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -1,13 +1,13 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=UserChooser,Statistics
+handler.list=UserChooser
 #handler.list=Statistics
 
 handler.imageonly=false
 
 userchooser.progress.enabled=true
-userchooser.columns=5
+userchooser.columns=4
 userchooser.rows=2
 
 directory.trash=C:/Users/Brett/TrashImages
