Include heic convert in basic mov properties
Add delete .mov file properties

--- a/src/main/resources/deletemov.properties
+++ b/src/main/resources/deletemov.properties
@@ -1,7 +1,7 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=FixFileExtension,DeleteFileType,RemoveDuplicates,MoveToDateSubdirectory,HEICConverter,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
+handler.list=FixFileExtension,DeleteFileType
 handler.imageonly=false
 
 separate.video.root=c:/Users/Brett/Videos
@@ -12,5 +12,5 @@ backup.video.root=Y:/Home Videos
 directory.trash=C:/Users/Brett/TrashImages
 directory.good=C:/Users/Brett/GoodImages
 
-delete.extensions=aae
+delete.extensions=mov
 
