Complete video rename and tag

--- a/src/main/resources/uservideo.properties
+++ b/src/main/resources/uservideo.properties
@@ -6,10 +6,13 @@ handler.list=VideoRenameAndTag, VerifyBackup
 
 handler.imageonly=false
 
-videorename.progress.enabled=true
-videorename.columns=4
-videorename.rows=4
+userchooser.progress.enabled=true
+userchooser.columns=2
+userchooser.rows=3
 
 directory.trash=C:/Users/Brett/TrashVideos
 directory.good=C:/Users/Brett/GoodVideos
+directory.count.file=fileCountsVideo.txt
+
 backup.video.root=Y:/Home Videos
+backup.image.root=Z:/Pictures
