--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-mainClassName = "util.OrganizeMedia"
+mainClassName = "bb.imgo.OrganizeMedia"
 
 sourceSets {
    main {
@@ -26,10 +26,21 @@ sourceSets {
 }
 
 
-jar {
-   manifest {
-      attributes 'Main-Class': 'util.OrganizeMedia'
+task fatJar(type: Jar) {
+   from {
+     configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
+   with jar
+   
+   exclude "META-INF/*.SF"
+   exclude "META-INF/*.DSA"
+   exclude "META-INF/*.RSA"
+ 
+   manifest {
+         attributes('Main-Class': 'bb.imgo.OrganizeMedia'
+      )      
+   }
+   
 }
 
 repositories {
@@ -37,9 +48,9 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
-    testImplementation 'junit:junit:4.12'
-    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
-    implementation 'org.apache.tika:tika-parsers:1.20'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    testCompile 'junit:junit:4.12'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+    compile 'org.apache.tika:tika-parsers:1.20'
 }
 
