--- a/src/main/resources/uservideo.properties
+++ b/src/main/resources/uservideo.properties
@@ -7,6 +7,7 @@ handler.list=VideoRenameAndTag, VerifyBackup
 handler.imageonly=false
 
 userchooser.progress.enabled=true
+userchooser.progress.filename=userChooserVideoProgress.txt
 userchooser.columns=2
 userchooser.rows=3
 
