Make UserChooser's temporary disable apply to ALL handlers
Should redesign this, but this will work for now

--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -1,5 +1,6 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
+handler.recountFiles=false
 
 handler.list=UserChooser
 #handler.list=Statistics
