Add ability to have a good files backup directory and a regular backup directory

--- a/src/main/resources/uservideo.properties
+++ b/src/main/resources/uservideo.properties
@@ -16,5 +16,7 @@ directory.trash=C:/Users/Brett/TrashVideos
 directory.good=C:/Users/Brett/GoodVideos
 directory.count.file=fileCountsVideo.txt
 
-backup.video.root=Y:/Home Videos
+backup.video.root=Y:/All Videos
+backup.video.root.good=Y:/Good Videos
 backup.image.root=Z:/Pictures
+backup.image.root.good=Z:/Good Pictures
