--- a/src/main/resources/videomove.properties
+++ b/src/main/resources/videomove.properties
@@ -6,8 +6,10 @@ handler.imageonly=false
 
 separate.video.root=c:/Users/Brett/Videos
 
+backup.video.root=Y:/All Videos
+backup.video.root.good=Y:/Good Videos
 backup.image.root=Z:/Pictures
-backup.video.root=Y:/Home Videos
+backup.image.root.good=Z:/Good Pictures
 
 directory.trash=C:/Users/Brett/TrashVideos
 directory.good=C:/Users/Brett/GoodVideos
