Refactor how images are loaded
Load images off the AWT event thread, display the base panel first, load
images in one by one.

--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -11,5 +11,5 @@ userchooser.progress.enabled=true
 userchooser.columns=4
 userchooser.rows=2
 
-directory.trash=C:/Users/Brett/TrashImages
-directory.good=C:/Users/Brett/GoodImages
+directory.trash=C:/Users/Brett/Pictures/TrashImages
+directory.good=C:/Users/Brett/Pictures/GoodImages
