UI update, added BrowseLabel class
Added ability to set and view good/trash dir and backup dirs

Start on ability to control which handlers are active via the ui

--- a/src/main/resources/uservideo.properties
+++ b/src/main/resources/uservideo.properties
@@ -9,8 +9,8 @@ handler.imageonly=false
 
 userchooser.progress.enabled=true
 userchooser.progress.filename=userChooserVideoProgress.txt
-userchooser.columns=2
-userchooser.rows=3
+userchooser.columns=3
+userchooser.rows=2
 
 directory.trash=C:/Users/Brett/TrashVideos
 directory.good=C:/Users/Brett/GoodVideos
@@ -18,5 +18,5 @@ directory.count.file=fileCountsVideo.txt
 
 backup.video.root=Y:/All Videos
 backup.video.root.good=Y:/Good Videos
-backup.image.root=Z:/Pictures
-backup.image.root.good=Z:/Good Pictures
+backup.image.root=X:/Pictures
+backup.image.root.good=X:/Good Pictures
