--- a/src/main/resources/videomove.properties
+++ b/src/main/resources/videomove.properties
@@ -8,8 +8,8 @@ separate.video.root=c:/Users/Brett/Videos
 
 backup.video.root=Y:/All Videos
 backup.video.root.good=Y:/Good Videos
-backup.image.root=Z:/Pictures
-backup.image.root.good=Z:/Good Pictures
+backup.image.root=X:/Pictures
+backup.image.root.good=X:/Good Pictures
 
 directory.trash=C:/Users/Brett/TrashVideos
 directory.good=C:/Users/Brett/GoodVideos
