Edit the default locations for the backup image/video directories

--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -2,7 +2,7 @@ handler.package=bb.imgo.handlers
 handler.moveFiles=true
 handler.recountFiles=false
 
-handler.list=UserChooser
+handler.list=UserChooser,VerifyBackup
 #handler.list=Statistics
 
 handler.imageonly=false
@@ -13,3 +13,7 @@ userchooser.rows=2
 
 directory.trash=C:/Users/Brett/Pictures/TrashImages
 directory.good=C:/Users/Brett/Pictures/GoodImages
+backup.video.root=Y:/All Videos
+backup.video.root.good=Y:/GoodVideos
+backup.image.root=X:/Pictures
+backup.image.root.good=X:/GoodImages
