Auto-mark videos as potential duplicates if they're within 1 kb size
Check file sizes before bothering with an md5 checksum, no point if the
sizes aren't the same.

--- a/src/main/resources/uservideo.properties
+++ b/src/main/resources/uservideo.properties
@@ -12,11 +12,11 @@ userchooser.progress.filename=userChooserVideoProgress.txt
 userchooser.columns=3
 userchooser.rows=2
 
-directory.trash=C:/Users/Brett/TrashVideos
-directory.good=C:/Users/Brett/GoodVideos
+directory.trash=C:/Users/Brett/Videos/TrashVideos
+directory.good=C:/Users/Brett/Videos/GoodVideos
 directory.count.file=fileCountsVideo.txt
 
 backup.video.root=Y:/All Videos
-backup.video.root.good=Y:/Good Videos
+backup.video.root.good=Y:/GoodVideos
 backup.image.root=X:/Pictures
-backup.image.root.good=X:/Good Pictures
+backup.image.root.good=X:/GoodImages
