Add MoveLivePhotos handler to move LivePhotos (short video files) to a special subdirectory
Ignore LivePhotos when doing video rename and tag by default

--- a/src/main/resources/move.properties
+++ b/src/main/resources/move.properties
@@ -1,7 +1,7 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=FixFileExtension,DeleteFileType,RemoveDuplicates,MoveToDateSubdirectory,HEICConverter,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
+handler.list=FixFileExtension,DeleteFileType,RemoveDuplicates,MoveToDateSubdirectory,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
 handler.imageonly=false
 
 separate.video.root=c:/Users/Brett/Videos
@@ -15,4 +15,6 @@ directory.trash=C:/Users/Brett/TrashImages
 directory.good=C:/Users/Brett/GoodImages
 
 delete.extensions=aae
+
+livephoto.subdir=LivePhotos
 
