--- a/src/main/resources/uservideo.properties
+++ b/src/main/resources/uservideo.properties
@@ -20,3 +20,5 @@ backup.video.root=Y:/All Videos
 backup.video.root.good=Y:/GoodVideos
 backup.image.root=X:/Pictures
 backup.image.root.good=X:/GoodImages
+
+livephoto.subdir=LivePhotos
