--- a/src/main/resources/videomove.properties
+++ b/src/main/resources/videomove.properties
@@ -1,7 +1,8 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=FixFileExtension,RemoveDuplicates,MoveToDateSubdirectory,RemoveEmptySubdirectory,VerifyBackup,Statistics
+#handler.list=FixFileExtension,RemoveDuplicates,MoveToDateSubdirectory,RemoveEmptySubdirectory,VerifyBackup,MoveLivePhotos,Statistics
+handler.list=MoveLivePhotos,Statistics
 handler.imageonly=false
 
 separate.video.root=c:/Users/Brett/Videos
@@ -13,4 +14,6 @@ backup.image.root.good=X:/Good Pictures
 
 directory.trash=C:/Users/Brett/TrashVideos
 directory.good=C:/Users/Brett/GoodVideos
+
+livephoto.subdir=LivePhotos
 
