Update default properties

--- a/src/main/resources/move.properties
+++ b/src/main/resources/move.properties
@@ -1,18 +1,17 @@
 handler.package=bb.imgo.handlers
 handler.moveFiles=true
 
-handler.list=FixFileExtension,DeleteFileType,RemoveDuplicates,MoveToDateSubdirectory,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
+handler.list=FixFileExtension,DeleteFileType,RemoveDuplicates,MoveToDateSubdirectory,MoveLivePhotos,SeparateVideos,RemoveEmptySubdirectory,VerifyBackup,Statistics
 handler.imageonly=false
 
-separate.video.root=c:/Users/Brett/Videos
+separate.video.root=D:/Videos
 
+directory.trash=D:/TrashImages
+directory.good=D:/GoodImages
 backup.video.root=Y:/All Videos
-backup.video.root.good=Y:/Good Videos
+backup.video.root.good=Y:/GoodVideos
 backup.image.root=X:/Pictures
-backup.image.root.good=X:/Good Pictures
-
-directory.trash=C:/Users/Brett/TrashImages
-directory.good=C:/Users/Brett/GoodImages
+backup.image.root.good=X:/GoodImages
 
 delete.extensions=aae
 
