--- a/src/main/resources/user.properties
+++ b/src/main/resources/user.properties
@@ -11,8 +11,8 @@ userchooser.progress.enabled=true
 userchooser.columns=4
 userchooser.rows=2
 
-directory.trash=C:/Users/Brett/Pictures/TrashImages
-directory.good=C:/Users/Brett/Pictures/GoodImages
+directory.trash=D:/TrashImages
+directory.good=D:/GoodImages
 backup.video.root=Y:/All Videos
 backup.video.root.good=Y:/GoodVideos
 backup.image.root=X:/Pictures
